--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                         <circle cx="8" cy="8" r="3" stroke="currentColor" stroke-width="1.5"/>
                         <path d="M8 1V2.5M8 13.5V15M15 8H13.5M2.5 8H1M12.7 12.7L11.5 11.5M4.5 4.5L3.3 3.3M12.7 3.3L11.5 4.5M4.5 11.5L3.3 12.7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
                     </svg>
-                    <svg class="moon-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" style="display: none;">
-                        <path d="M13.5 8.5C13.5 11.5376 11.0376 14 8 14C6.5 14 5.14903 13.3625 4.18182 12.3409C3.43248 11.5516 3 10.5 3 9.3C3 6.26243 5.46243 3.8 8.5 3.8C8.66667 3.8 8.83108 3.80887 8.99264 3.82633C6.91667 4.20833 5.5 6.07692 5.5 8.5C5.5 11.2614 7.73858 13.5 10.5 13.5C11.8462 13.5 13.0417 12.8333 13.7737 11.8007C13.6342 12.9124 13.1256 13.907 12.3636 14.6591C13.0833 13.7917 13.5 12.6923 13.5 11.5V8.5Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <svg class="moon-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="display: none;">
+                        <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
                     </svg>
                 </button>
                 <button class="queue-toggle" onclick="toggleQueueSidebar()" aria-label="Toggle queue">
@@ -27,12 +27,6 @@
                         <rect x="2" y="3" width="12" height="2" rx="1" stroke="currentColor" stroke-width="1.5"/>
                         <rect x="2" y="7" width="12" height="2" rx="1" stroke="currentColor" stroke-width="1.5"/>
                         <rect x="2" y="11" width="12" height="2" rx="1" stroke="currentColor" stroke-width="1.5"/>
-                    </svg>
-                </button>
-                <button class="settings-toggle" onclick="openSettings()" aria-label="Open settings">
-                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                        <path d="M8 10C9.10457 10 10 9.10457 10 8C10 6.89543 9.10457 6 8 6C6.89543 6 6 6.89543 6 8C6 9.10457 6.89543 10 8 10Z" stroke="currentColor" stroke-width="1.5"/>
-                        <path d="M12.4 10C12.2583 10.3194 12.1833 10.6611 12.1833 11.0167C12.1833 11.8417 12.675 12.5583 13.3833 12.8667L13.5 12.9167V13.0833L13.3833 13.1333C12.675 13.4417 12.1833 14.1583 12.1833 14.9833C12.1833 15.3389 12.2583 15.6806 12.4 16L12.45 16.0833L12.3333 16.1333C11.7611 16.4 11.0944 16.4 10.5222 16.1333L10.4 16.0833L10.45 16C10.5917 15.6806 10.6667 15.3389 10.6667 14.9833C10.6667 14.1583 10.175 13.4417 9.46667 13.1333L9.35 13.0833V12.9167L9.46667 12.8667C10.175 12.5583 10.6667 11.8417 10.6667 11.0167C10.6667 10.6611 10.5917 10.3194 10.45 10L10.4 9.91667L10.5222 9.86667C11.0944 9.6 11.7611 9.6 12.3333 9.86667L12.45 9.91667L12.4 10Z" stroke="currentColor" stroke-width="1.5"/>
                     </svg>
                 </button>
             </div>
@@ -235,13 +229,6 @@
 
                 <!-- Settings -->
                 <div class="settings-footer">
-                    <button class="settings-btn" onclick="openSettings()">
-                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                            <path d="M8 10C9.10457 10 10 9.10457 10 8C10 6.89543 9.10457 6 8 6C6.89543 6 6 6.89543 6 8C6 9.10457 6.89543 10 8 10Z" stroke="currentColor" stroke-width="1.5"/>
-                            <path d="M12.4 10C12.2583 10.3194 12.1833 10.6611 12.1833 11.0167C12.1833 11.8417 12.675 12.5583 13.3833 12.8667L13.5 12.9167V13.0833L13.3833 13.1333C12.675 13.4417 12.1833 14.1583 12.1833 14.9833C12.1833 15.3389 12.2583 15.6806 12.4 16L12.45 16.0833L12.3333 16.1333C11.7611 16.4 11.0944 16.4 10.5222 16.1333L10.4 16.0833L10.45 16C10.5917 15.6806 10.6667 15.3389 10.6667 14.9833C10.6667 14.1583 10.175 13.4417 9.46667 13.1333L9.35 13.0833V12.9167L9.46667 12.8667C10.175 12.5583 10.6667 11.8417 10.6667 11.0167C10.6667 10.6611 10.5917 10.3194 10.45 10L10.4 9.91667L10.5222 9.86667C11.0944 9.6 11.7611 9.6 12.3333 9.86667L12.45 9.91667L12.4 10Z" stroke="currentColor" stroke-width="1.5"/>
-                        </svg>
-                        Settings
-                    </button>
                     <button class="folder-btn" onclick="openDownloadFolder()">
                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                             <path d="M2 4.5C2 3.67157 2.67157 3 3.5 3H6.5L8 5H12.5C13.3284 5 14 5.67157 14 6.5V11.5C14 12.3284 13.3284 13 12.5 13H3.5C2.67157 13 2 12.3284 2 11.5V4.5Z" stroke="currentColor" stroke-width="1.5"/>
